# DsaAlgo

./: DataStructures&Algo.md  README.md
01 ASSIGNMENTS/Week-2/: 04 NumericEquPalindrome.cpp  05 SolidHalfDiamond.cpp  06 FancyPatternOne.cpp  07 FancyPatternTwo.cpp  08 FancyPatternThree.cpp  09 FloydsTrianglePattern.cpp  20 SetKthBit.cpp  22 CountAllSetBit.cpp  23 CreateNumToDigits.cpp  ConvertTheTemperature.cpp  FindTheFactorial.cpp  KilometreToMiles.cpp  PrimeNumber.cpp  PrintAllDigitsOfInteger.cpp
01 ASSIGNMENTS/Week-3/: 01_KeyPair.cpp  FindThePivot.cpp  MissingNumber.cpp
02 INTROTODUCTION/: DoWhileLoops.cpp  Main.cpp  NumberSystems.cpp  SwitchCases.cpp  TypeCastings.cpp  Variables&DataTypes.cpp
03 BASICLvOne/: ControlFlow.cpp  DoWhileLoops.cpp  FunctionsInCPP.cpp  Loops.cpp  NamasteDuniya.cpp  Operators.cpp  Readme.md  TernaryOperator.cpp  TypeCastings.cpp  Variables&DataTypes.cpp  printingPatterns.cpp
03 BASICLvOne/BITWISE/: Pract1.cpp  PrimeNumber.cpp  README.md  RoughCopy.cpp  main.cpp
03 BASICLvOne/FUNCTIONS/: CMakeLists.txt  FibonacciFunc.cpp
04 BASICLvTwo/: FullPyramid.cpp  functions.cpp
04 BASICLvTwo/PATTERNS/: Pattern1.cpp  Pattern10.cpp  Pattern11.cpp  Pattern13.cpp  Pattern15.cpp  Pattern16.cpp  Pattern18.cpp  Pattern2.cpp  Pattern21.cpp  Pattern22.cpp  Pattern3.cpp  Pattern4.cpp  Pattern5.cpp  Pattern6.cpp  Pattern7.cpp  Pattern8.cpp  Pattern9.cpp
05 ARRAYS/: Arrays1.cpp  BuggyDebug.cpp  FindUniqueNum.cpp  ReverseArray.cpp  SortZerosOnes.cpp  SumOfArray.cpp  SumOfTriplets.cpp  SwapArrayInt.cpp  TwoSums.cpp
05 ARRAYS/2DARRAYS/: ChekingFill.cpp
05 ARRAYS/ArrayClassThreeCodes/: code1.cpp
05 ARRAYS/DoubtClass/: main.cpp  swap.cpp
06 STL/: readme.md
06 STL/01 STL-ALGORITHMS/: HeapAlgorithms.cpp  (+1 more)
07 VECTORS/: FindTheMinValue.cpp  MemberFunctions.md
08 LIST/: List1.cpp
09 SEARCHINGSORTING/: BSearch1.cpp  SearchTargetElement.cpp  StoreCompute.cpp
10 STRINGS/: PrintStringChars.cpp  ReplaceAllZeros.cpp  StringPalindrome.cpp
11 OOPS/: Abstractions.cpp  ComplexOperatorOverload.cpp  CopyConstructor.cpp  DynamicMemory.cpp  ParameterisedConstructors.cpp  RunTmePolymorphism.cpp
13 QUEUE/: Queue1.cpp
23 QUESTIONS/: PowerOfTwoNums.cpp
25 ROUGHCODES/: CMakeLists.txt  Practice2.cpp  PracticePlayground.cpp  SumofEvenNums.cpp
2DARRAYS/: UserInputCheck.cpp
ARRAYS/: Arrays1.cpp  CMakeLists.txt  ConceptPract.cpp  HashMaps.cpp  JaggedArray1.cpp  LinearSearch.cpp  PairOfArrays.cpp  StringReverse.cpp  SwapAGivennumber.cpp  SwappingEle.cpp
ARRAYS/2DARRAYS/: ChekingFill.cpp  ColoumnWisePrinting.cpp  FindTargetEle.cpp
ARRAYS/DoubtClass/: reversearray.cpp
ASSIGNMENTS/Week-2/output/PATTERNS/: CMakeLists.txt  Pattern14.cpp  Pattern20.cpp
BASICLEVELONE/: Readme.md  UserInput.cpp
BINARYSEARCH/: CMakeLists.txt
BITWISE/: CMakeLists.txt  README.md
FUNCTIONS/: PrimeNumber.cpp
INTROTOC++/: Loops.cpp  Readme.md  TypeCastings.cpp
MISC/: UniverstityCodesDSwithCPP.xlsx
New folder/: Practice2.cpp
OOPS/: StudentClass.cpp  VehicleModels.cpp
OTHERS/: ShutdownWin.cpp
PATTERNS/: Pattern12.cpp  Pattern23.cpp
VECTORS/: Vector1.cpp
(+79 files in other folders)
