cmake_minimum_required(VERSION 3.28)
project(ARRAYS)

set(CMAKE_CXX_STANDARD 17)

add_executable(ARRAYS main.cpp
        SumOfArray.cpp
        LinearSearch.cpp
        ReverseArray.cpp
        SwapArrayInt.cpp
        HashMaps.cpp
        ConceptPract.cpp
        SwapAGivennumber.cpp
        StringReverse.cpp
        FindUniqueNum.cpp
        SortZerosOnes.cpp
        PairOfArrays.cpp
        TwoSums.cpp
        SumOfTriplets.cpp)
add_executable(ARRAYS1 Arrays1.cpp)
add_executable(ARRAYS2 MaxMixArray.cpp)
add_executable(ARRAYS3 SumOfArray.cpp)
add_executable(ARRAYS4 LinearSearch.cpp)
add_executable(ARRAYS5 ReverseArray.cpp)
add_executable(ARRAYS6 SwapArrayInt.cpp)
add_executable(ARRAYS7 HashMaps.cpp)
add_executable(ARRAYS8 ConceptPract.cpp)
add_executable(ARRAYS9 SwapAGivennumber.cpp)
add_executable(ARRAYS10 StringReverse.cpp)
add_executable(ARRAYS11 FindUniqueNum.cpp)
add_executable(ARRAYS12 SortZerosOnes.cpp)
add_executable(ARRAYS13 PairOfArrays.cpp)
add_executable(ARRAYS14 TwoSums.cpp)
add_executable(ARRAYS15 SumOfTriplets.cpp)