cmake_minimum_required(VERSION 3.28)
project(PATTERNS)

set(CMAKE_CXX_STANDARD 17)

add_executable(PATTERNS main.cpp
        Pattern23.cpp)
add_executable(PATTERN1 Pattern1.cpp)
add_executable(PATTERN2 Pattern2.cpp)
add_executable(PATTERN3 Pattern3.cpp)
add_executable(PATTERN4 Pattern4.cpp)
add_executable(PATTERN5 Pattern5.cpp)
add_executable(PATTERN6 Pattern6.cpp)
add_executable(PATTERN7 Pattern7.cpp)
add_executable(PATTERN8 Pattern8.cpp)
add_executable(PATTERN9 Pattern9.cpp)
add_executable(PATTERN10 Pattern10.cpp)
add_executable(PATTERN11 Pattern11.cpp)
add_executable(PATTERN12 Pattern12.cpp)
add_executable(PATTERN13 Pattern13.cpp)
add_executable(PATTERN14 Pattern14.cpp)
add_executable(PATTERN15 Pattern15.cpp)
add_executable(PATTERN16 Pattern16.cpp)
add_executable(PATTERN17 Pattern17.cpp)
add_executable(PATTERN18 Pattern18.cpp)
add_executable(PATTERN19 Pattern19.cpp)
add_executable(PATTERN20 Pattern20.cpp)
add_executable(PATTERN21 Pattern21.cpp)
add_executable(PATTERN22 Pattern22.cpp)
add_executable(PATTERN23 Pattern23.cpp)
